Added autofocus, added a crossmark in the placeholder

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,38 @@
 <html>
   <head>
     <title>index</title>
+
+    <style>
+
+      .tagged-input-wrapper .tag .tag-text {
+        padding-left: 5px;
+      }
+
+      .tagged-input-wrapper .tag {
+        background-color: #E9E9E9;
+        padding: 2px 0px 2px 2px;
+        border-radius: 2px;
+      }
+
+      .tagged-input-wrapper .tag .remove {
+        color: #a0a0a0;
+        padding: 0px 4px;
+        font-size: 75%;
+        line-height: 100%;
+        cursor: pointer;
+      }
+
+      .tagged-input-wrapper .tag .remove:hover {
+        color: red;
+      }
+
+      .tagged-input-wrapper .tag .remove,
+      .tagged-input-wrapper .tag .tag-text {
+        display: inline-block;
+      }
+
+    </style>
+
   </head>
 
   <body>
